--- a/articles/data-explorer/toc.yml
+++ b/articles/data-explorer/toc.yml
@@ -1,149 +1,142 @@
-items:
 - name: Documentatie voor Azure Data Explorer
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat is Data Explorer?
-    href: data-explorer-overview.md
+    - name: Wat is Data Explorer?
+      href: data-explorer-overview.md
 - name: Snelstartgidsen
-  items:
-  - name: Cluster en database maken
-    items:
-    - name: Azure Portal
-      href: create-cluster-database-portal.md
-    - name: Azure-CLI
-      href: create-cluster-database-cli.md
-    - name: PowerShell
-      href: create-cluster-database-powershell.md
-    - name: C#
-      href: create-cluster-database-csharp.md
-    - name: Python
-      href: create-cluster-database-python.md
-  - name: Gegevens opnemen
-    items:
-    - name: Gegevens streamen - Event Hub
-      href: ingest-data-event-hub.md
-    - name: Gegevens streamen - Event Grid
-      href: ingest-data-event-grid.md
-    - name: Gegevens streamen - Kafka
-      href: ingest-data-kafka.md
-    - name: Gegevens batchen - Python
-      href: python-ingest-data.md
-    - name: Gegevens batchen - Node SDK
-      href: node-ingest-data.md
-    - name: Gegevens batchen - .NET Standard-SDK
-      href: net-standard-ingest-data.md
-    - name: Gegevens batchen - Logstash
-      href: ingest-data-logstash.md
-  - name: Querygegevens
-    items:
-    - name: Webgebruikersinterface
-      href: web-query-data.md
-    - name: Python
-      href: python-query-data.md
-  - name: Gegevens visualiseren
-    items:
-    - name: Power BI - connector
-      href: power-bi-connector.md
-    - name: Power BI - geïmporteerde query
-      href: power-bi-imported-query.md
-    - name: Power BI - SQL-query
-      href: power-bi-sql-query.md
   expanded: true
+  items:
+    - name: Cluster en database maken
+      items:
+        - name: Azure Portal
+          href: create-cluster-database-portal.md
+        - name: Azure-CLI
+          href: create-cluster-database-cli.md
+        - name: PowerShell
+          href: create-cluster-database-powershell.md
+        - name: 'C#'
+          href: create-cluster-database-csharp.md
+        - name: Python
+          href: create-cluster-database-python.md
+    - name: Gegevens opnemen
+      items:
+        - name: Gegevens streamen - Event Hub
+          href: ingest-data-event-hub.md
+        - name: Gegevens streamen - Event Grid
+          href: ingest-data-event-grid.md
+        - name: Gegevens streamen - Kafka
+          href: ingest-data-kafka.md
+        - name: Gegevens batchen - Python
+          href: python-ingest-data.md
+        - name: Gegevens batchen - Node SDK
+          href: node-ingest-data.md
+        - name: Gegevens batchen - .NET Standard-SDK
+          href: net-standard-ingest-data.md
+        - name: Gegevens batchen - Logstash
+          href: ingest-data-logstash.md
+    - name: Querygegevens
+      items:
+        - name: Webgebruikersinterface
+          href: web-query-data.md
+        - name: Python
+          href: python-query-data.md
+    - name: Gegevens visualiseren
+      items:
+        - name: Power BI - connector
+          href: power-bi-connector.md
+        - name: Power BI - geïmporteerde query
+          href: power-bi-imported-query.md
+        - name: Power BI - SQL-query
+          href: power-bi-sql-query.md
 - name: Zelfstudies
   items:
-  - name: Gegevens opnemen zonder code
-    href: ingest-data-no-code.md
-  - name: Gegevens visualiseren in Power BI
-    href: visualize-power-bi.md
+    - name: Gegevens opnemen zonder code
+      href: ingest-data-no-code.md
+    - name: Gegevens visualiseren in Power BI
+      href: visualize-power-bi.md
 - name: Concepten
   items:
-  - name: Overzicht van gegevensopname
-    displayName: pipelines, connectors, plugins, Python, .NET, Java, Node, REST
-    href: ingest-data-overview.md
-  - name: Tijdreeksanalyse
-    href: time-series-analysis.md
+    - name: Overzicht van gegevensopname
+      displayName: 'pipelines, connectors, plugins, Python, .NET, Java, Node, REST'
+      href: ingest-data-overview.md
+    - name: Tijdreeksanalyse
+      href: time-series-analysis.md
 - name: Handleidingen
   items:
-  - name: Aan de slag
-    items:
-    - name: Query's schrijven
-      href: write-queries.md
-    - name: Voorbeeldgegevens opnemen
-      href: ingest-sample-data.md
-  - name: Beheren
-    items:
-    - name: Databasemachtigingen beheren
-      href: manage-database-permissions.md
-    - name: Clusterstatus controleren
-      href: check-cluster-health.md
-    - name: Cluster uitschalen beheren
-      href: manage-cluster-scale-out.md
-    - name: Cluster omhoog schalen beheren
-      href: manage-cluster-scale-up.md
-    - name: Gegevens verwijderen
-      href: delete-data.md
-    - name: Dubbele gegevens aanpakken
-      href: dealing-with-duplicates.md
-  - name: Bewaking
-    items:
-    - name: Metrische gegevens gebruiken om de clusterstatus te controleren
-      href: using-metrics.md
-  - name: Werken met andere hulpprogramma's
-    items:
-    - name: Verbinding vanaf Databricks maken met behulp van Python
-      href: connect-from-databricks.md
-    - name: Gegevens analyseren met Jupyter Notebooks en Kqlmagic
-      href: kqlmagic.md
-    - name: Gegevens kopiëren in Azure Data Factory
-      href: data-factory-load-data.md
-    - name: Gegevens visualiseren in Grafana
-      href: grafana.md
-    - name: Verbinding maken met ODBC
-      href: connect-odbc.md
-  - name: Problemen oplossen
-    items:
-    - name: Een cluster maken
-      href: troubleshoot-create-cluster.md
-    - name: Verbinding maken met een cluster
-      href: troubleshoot-connect-cluster.md
-    - name: Werken met databases en tabellen
-      href: troubleshoot-database-table.md
+    - name: Aan de slag
+      items:
+        - name: Query's schrijven
+          href: write-queries.md
+        - name: Voorbeeldgegevens opnemen
+          href: ingest-sample-data.md
+    - name: Beheren
+      items:
+        - name: Databasemachtigingen beheren
+          href: manage-database-permissions.md
+        - name: Clusterstatus controleren
+          href: check-cluster-health.md
+        - name: Cluster uitschalen beheren
+          href: manage-cluster-scale-out.md
+        - name: Cluster omhoog schalen beheren
+          href: manage-cluster-scale-up.md
+        - name: Gegevens verwijderen
+          href: delete-data.md
+        - name: Dubbele gegevens aanpakken
+          href: dealing-with-duplicates.md
+    - name: Bewaking
+      items:
+        - name: Metrische gegevens gebruiken om de clusterstatus te controleren
+          href: using-metrics.md
+    - name: Werken met andere hulpprogramma's
+      items:
+        - name: Verbinding vanaf Databricks maken met behulp van Python
+          href: connect-from-databricks.md
+        - name: Gegevens analyseren met Jupyter Notebooks en Kqlmagic
+          href: kqlmagic.md
+        - name: Gegevens kopiëren met Azure Data Factory
+          href: data-factory-load-data.md
+        - name: Gegevens visualiseren in Grafana
+          href: grafana.md
+        - name: Verbinding maken met ODBC
+          href: connect-odbc.md
+    - name: Problemen oplossen
+      items:
+        - name: Een cluster maken
+          href: troubleshoot-create-cluster.md
+        - name: Verbinding maken met een cluster
+          href: troubleshoot-connect-cluster.md
+        - name: Werken met databases en tabellen
+          href: troubleshoot-database-table.md
 - name: Naslaginformatie
   items:
-  - name: Querytaal
-    href: /azure/kusto/query/
-  - name: Opdrachten voor beheer
-    href: /azure/kusto/management/
-  - name: API's
-    href: /azure/kusto/api/
-  - name: Hulpprogramma's
-    href: /azure/kusto/tools/
-  - name: Concepten
-    href: /azure/kusto/concepts/
+    - name: Querytaal
+      href: /azure/kusto/query/
+    - name: Opdrachten voor beheer
+      href: /azure/kusto/management/
+    - name: API's
+      href: /azure/kusto/api/
+    - name: Hulpprogramma's
+      href: /azure/kusto/tools/
+    - name: Concepten
+      href: /azure/kusto/concepts/
 - name: Resources
   items:
-  - name: Blog
-    href: https://azure.microsoft.com/blog/tag/azure-data-explorer/
-  - name: Forums
-    items:
-    - name: Stack Overflow
-      href: https://stackoverflow.com/questions/tagged/azure-data-explorer
-    - name: Microsoft Tech Community
-      href: https://techcommunity.microsoft.com/t5/Azure-Data-Explorer/bd-p/Kusto
-    - name: MSDN-forum
-      href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureKusto
-  - name: Productfeedback
-    href: https://aka.ms/adefeedback
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/data-explorer/
-  - name: Kostenraming
-    href: https://aka.ms/adecostestimator
-  - name: Service-updates
-    href: https://azure.microsoft.com/updates/?product=data-explorer
-ms.openlocfilehash: c582b82f4b4caf0ee3bb007934cc4d50163fe139
-ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/16/2019
-ms.locfileid: "59616812"
+    - name: Blog
+      href: 'https://azure.microsoft.com/blog/tag/azure-data-explorer/'
+    - name: Forums
+      items:
+        - name: Stack Overflow
+          href: 'https://stackoverflow.com/questions/tagged/azure-data-explorer'
+        - name: Microsoft Tech Community
+          href: 'https://techcommunity.microsoft.com/t5/Azure-Data-Explorer/bd-p/Kusto'
+        - name: MSDN-forum
+          href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureKusto'
+    - name: Productfeedback
+      href: 'https://aka.ms/adefeedback'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/data-explorer/'
+    - name: Kostenraming
+      href: 'https://aka.ms/adecostestimator'
+    - name: Service-updates
+      href: 'https://azure.microsoft.com/updates/?product=data-explorer'
