--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -1,130 +1,127 @@
-items:
 - name: Documentatie voor Azure Data Box - Offline overdracht
   href: /azure/databox
   items:
-  - name: Data Box
-    items:
-    - name: Overzicht
+    - name: Data Box
       items:
-      - name: Wat is Data Box?
-        href: data-box-overview.md
-    - name: Snelstartgidsen
+        - name: Overzicht
+          items:
+            - name: Wat is Data Box?
+              href: data-box-overview.md
+        - name: Snelstartgidsen
+          expanded: true
+          items:
+            - name: Instellen - Azure Portal
+              href: data-box-quickstart-portal.md
+        - name: Zelfstudies
+          items:
+            - name: 1 - Bestellen
+              href: data-box-deploy-ordered.md
+            - name: 2 - Instellen
+              href: data-box-deploy-set-up.md
+            - name: 3 - Verbinding maken en kopiëren
+              items:
+                - name: Via SMB
+                  href: data-box-deploy-copy-data.md
+                - name: Via NFS
+                  href: data-box-deploy-copy-data-via-nfs.md
+                - name: Via REST
+                  href: data-box-deploy-copy-data-via-rest.md
+                - name: Via gegevenskopieerservice
+                  href: data-box-deploy-copy-data-via-copy-service.md
+                - name: Naar beheerde schijven
+                  href: data-box-deploy-copy-data-from-vhds.md
+            - name: '4 - Terugsturen, uploaden, controleren'
+              href: data-box-deploy-picked-up.md
+        - name: Concepten
+          items:
+            - name: Lees de veiligheidsrichtlijnen
+              href: data-box-safety.md
+            - name: Vereisten beoordelen
+              items:
+                - name: Voor Data Box
+                  href: data-box-system-requirements.md
+                - name: Voor Data Box-blobopslag
+                  href: data-box-system-requirements-rest.md
+            - name: Limieten begrijpen
+              href: data-box-limits.md
+            - name: Beveiliging controleren
+              href: data-box-security.md
+            - name: Veelgestelde vragen
+              href: data-box-faq.md
+        - name: Procedures
+          items:
+            - name: Beheren via Azure Portal
+              href: data-box-portal-admin.md
+            - name: Beheren via lokale webinterface
+              href: data-box-local-web-ui-admin.md
+            - name: Gegevens verplaatsen naar een blob-laag
+              href: data-box-how-to-set-data-tier.md
+            - name: Het apparaat bekabelen
+              href: data-box-cable-options.md
+            - name: Contact met ondersteuning
+              href: data-box-disk-contact-microsoft-support.md
+            - name: Migreren
+              items:
+                - name: Naar SharePoint Online
+                  href: 'https://docs.microsoft.com/sharepointmigration/how-to-migrate-file-share-content-to-spo-using-azuredatabox?context=/azure/databox/context/context'
+                - name: Naar Azure File Sync
+                  href: ../storage/files/storage-sync-offline-data-transfer.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
+                - name: Uit HDFS-archief
+                  href: ../storage/blobs/data-lake-storage-migrate-on-premises-hdfs-cluster.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
+            - name: Problemen oplossen
+              items:
+                - name: Blobopslagproblemen in Data Box
+                  href: data-box-troubleshoot-rest.md
+    - name: Data Box Disk
       items:
-      - name: Instellen - Azure Portal
-        href: data-box-quickstart-portal.md
-      expanded: true
-    - name: Zelfstudies
+        - name: Overzicht
+          items:
+            - name: Wat is Data Box Disk?
+              href: data-box-disk-overview.md
+        - name: Snelstartgidsen
+          expanded: true
+          items:
+            - name: Instellen - Azure Portal
+              href: data-box-disk-quickstart-portal.md
+        - name: Zelfstudies
+          items:
+            - name: 1 - Bestellen
+              href: data-box-disk-deploy-ordered.md
+            - name: 2 - Instellen
+              href: data-box-disk-deploy-set-up.md
+            - name: 3 - Kopiëren en valideren
+              href: data-box-disk-deploy-copy-data.md
+            - name: '4 - Terugsturen, uploaden, controleren'
+              href: data-box-disk-deploy-picked-up.md
+        - name: Concepten
+          items:
+            - name: Vereisten beoordelen
+              href: data-box-disk-system-requirements.md
+            - name: Limieten begrijpen
+              href: data-box-disk-limits.md
+            - name: Beveiliging controleren
+              href: data-box-disk-security.md
+            - name: Veelgestelde vragen
+              href: data-box-disk-faq.md
+        - name: Procedures
+          items:
+            - name: Beheren via Azure Portal
+              href: data-box-portal-ui-admin.md
+            - name: Problemen met een schijf oplossen
+              href: data-box-disk-troubleshoot.md
+            - name: Contact met ondersteuning
+              href: data-box-disk-contact-microsoft-support.md
+    - name: Data Box Heavy
       items:
-      - name: 1 - Bestellen
-        href: data-box-deploy-ordered.md
-      - name: 2 - Instellen
-        href: data-box-deploy-set-up.md
-      - name: 3 - Verbinding maken en kopiëren
-        items:
-        - name: Via SMB
-          href: data-box-deploy-copy-data.md
-        - name: Via NFS
-          href: data-box-deploy-copy-data-via-nfs.md
-        - name: Via REST
-          href: data-box-deploy-copy-data-via-rest.md
-        - name: Via gegevenskopieerservice
-          href: data-box-deploy-copy-data-via-copy-service.md
-        - name: Naar beheerde schijven
-          href: data-box-deploy-copy-data-from-vhds.md
-      - name: 4 - Terugsturen, uploaden, controleren
-        href: data-box-deploy-picked-up.md
-    - name: Concepten
+        - name: Overzicht
+          items:
+            - name: Wat is Data Box Disk Heavy?
+              href: data-box-heavy-overview.md
+    - name: Resources
       items:
-      - name: Lees de veiligheidsrichtlijnen
-        href: data-box-safety.md
-      - name: Vereisten beoordelen
-        items:
-        - name: Voor Data Box
-          href: data-box-system-requirements.md
-        - name: Voor Data Box-blobopslag
-          href: data-box-system-requirements-rest.md
-      - name: Limieten begrijpen
-        href: data-box-limits.md
-      - name: Beveiliging controleren
-        href: data-box-security.md
-      - name: Veelgestelde vragen
-        href: data-box-faq.md
-    - name: Procedures
-      items:
-      - name: Beheren via Azure Portal
-        href: data-box-portal-admin.md
-      - name: Beheren via lokale webinterface
-        href: data-box-local-web-ui-admin.md
-      - name: Gegevens verplaatsen naar een blob-laag
-        href: data-box-how-to-set-data-tier.md
-      - name: Het apparaat bekabelen
-        href: data-box-cable-options.md
-      - name: Contact met ondersteuning
-        href: data-box-disk-contact-microsoft-support.md
-      - name: Migreren
-        items:
-        - name: Naar SharePoint Online
-          href: https://docs.microsoft.com/sharepointmigration/how-to-migrate-file-share-content-to-spo-using-azuredatabox?context=/azure/databox/context/context
-        - name: Naar Azure File Sync
-          href: ../storage/files/storage-sync-offline-data-transfer.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
-        - name: Uit HDFS-archief
-          href: ../storage/blobs/data-lake-storage-migrate-on-premises-hdfs-cluster.md?toc=/azure/databox/toc.json&bc=/azure/databox/breadcrumb/toc.json
-  - name: Data Box Disk
-    items:
-    - name: Overzicht
-      items:
-      - name: Wat is Data Box Disk?
-        href: data-box-disk-overview.md
-    - name: Snelstartgidsen
-      items:
-      - name: Instellen - Azure Portal
-        href: data-box-disk-quickstart-portal.md
-      expanded: true
-    - name: Zelfstudies
-      items:
-      - name: 1 - Bestellen
-        href: data-box-disk-deploy-ordered.md
-      - name: 2 - Instellen
-        href: data-box-disk-deploy-set-up.md
-      - name: 3 - Kopiëren en valideren
-        href: data-box-disk-deploy-copy-data.md
-      - name: 4 - Terugsturen, uploaden, controleren
-        href: data-box-disk-deploy-picked-up.md
-    - name: Concepten
-      items:
-      - name: Vereisten beoordelen
-        href: data-box-disk-system-requirements.md
-      - name: Limieten begrijpen
-        href: data-box-disk-limits.md
-      - name: Beveiliging controleren
-        href: data-box-disk-security.md
-      - name: Veelgestelde vragen
-        href: data-box-disk-faq.md
-    - name: Procedures
-      items:
-      - name: Beheren via Azure Portal
-        href: data-box-portal-ui-admin.md
-      - name: Problemen met een schijf oplossen
-        href: data-box-disk-troubleshoot.md
-      - name: Contact met ondersteuning
-        href: data-box-disk-contact-microsoft-support.md
-  - name: Data Box Heavy
-    items:
-    - name: Overzicht
-      items:
-      - name: Wat is Data Box Disk Heavy?
-        href: data-box-heavy-overview.md
-  - name: Resources
-    items:
-    - name: Data Box-product
-      href: https://azure.microsoft.com/services/storage/databox/data/
-    - name: Prijzen van Data Box
-      href: https://azure.microsoft.com/pricing/details/storage/databox/
-    - name: Prijzen van Data Box Disk
-      href: https://azure.microsoft.com/pricing/details/storage/databox/disk/
-ms.openlocfilehash: 159fbf5782e51cc316e2b7f4474a5ddc94cf8a59
-ms.sourcegitcommit: c174d408a5522b58160e17a87d2b6ef4482a6694
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/18/2019
-ms.locfileid: "59794003"
+        - name: Data Box-product
+          href: 'https://azure.microsoft.com/services/storage/databox/data/'
+        - name: Prijzen van Data Box
+          href: 'https://azure.microsoft.com/pricing/details/storage/databox/'
+        - name: Prijzen van Data Box Disk
+          href: 'https://azure.microsoft.com/pricing/details/storage/databox/disk/'
