--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -1,126 +1,121 @@
-items:
 - name: Documentatie over rapporten en controle
   href: index.yml
 - name: Overzicht
   items:
-  - name: Wat zijn Azure AD-rapporten?
-    href: overview-reports.md
-  - name: Wat is Azure AD Monitoring?
-    href: overview-monitoring.md
+    - name: Wat zijn Azure AD-rapporten?
+      href: overview-reports.md
+    - name: Wat is Azure AD Monitoring?
+      href: overview-monitoring.md
 - name: Snelstartgidsen
-  items:
-  - name: Rapporten
-    items:
-    - name: Een aanmeldrapport downloaden
-      href: quickstart-download-sign-in-report.md
-    - name: Een controlerapport downloaden
-      href: quickstart-download-audit-report.md
-    - name: Benoemde locaties configureren
-      href: quickstart-configure-named-locations.md
-    - name: Inhoudspakket voor Power BI installeren
-      href: quickstart-install-power-bi-content-pack.md
-  - name: Bewaking
-    items:
-    - name: Logboeken naar opslagaccount doorsturen
-      href: quickstart-azure-monitor-route-logs-to-storage-account.md
   expanded: true
+  items:
+    - name: Rapporten
+      items:
+        - name: Een aanmeldrapport downloaden
+          href: quickstart-download-sign-in-report.md
+        - name: Een controlerapport downloaden
+          href: quickstart-download-audit-report.md
+        - name: Benoemde locaties configureren
+          href: quickstart-configure-named-locations.md
+        - name: Inhoudspakket voor Power BI installeren
+          href: quickstart-install-power-bi-content-pack.md
+    - name: Bewaking
+      items:
+        - name: Logboeken naar opslagaccount doorsturen
+          href: quickstart-azure-monitor-route-logs-to-storage-account.md
 - name: Zelfstudies
   items:
-  - name: Rapporten
-    items:
-    - name: Toegang krijgen tot de API voor rapportage met behulp van certificaten
-      href: tutorial-access-api-with-certificates.md
-  - name: Bewaking
-    items:
-    - name: Logboeken naar Event Hub streamen
-      href: tutorial-azure-monitor-stream-logs-to-event-hub.md
-    - name: Activiteitenlogboeken met Splunk integreren
-      href: tutorial-integrate-activity-logs-with-splunk.md
+    - name: Rapporten
+      items:
+        - name: Toegang krijgen tot de API voor rapportage met behulp van certificaten
+          href: tutorial-access-api-with-certificates.md
+    - name: Bewaking
+      items:
+        - name: Logboeken naar Event Hub streamen
+          href: tutorial-azure-monitor-stream-logs-to-event-hub.md
+        - name: Activiteitenlogboeken met Splunk integreren
+          href: tutorial-integrate-activity-logs-with-splunk.md
 - name: Concepten
   items:
-  - name: Rapporten
-    items:
-    - name: Auditlogboeken
-      href: concept-audit-logs.md
-    - name: Aanmeldingslogboeken
-      href: concept-sign-ins.md
-    - name: Riskante aanmeldingen
-      href: concept-risky-sign-ins.md
-    - name: Risicogebeurtenissen
-      href: concept-risk-events.md
-    - name: Gebruikers die risico lopen
-      href: concept-user-at-risk.md
-    - name: API's voor rapportage
-      href: concept-reporting-api.md
-  - name: Bewaking
-    items:
-    - name: Azure AD-logboeken in Azure Monitor
-      href: concept-activity-logs-azure-monitor.md
+    - name: Rapporten
+      items:
+        - name: Auditlogboeken
+          href: concept-audit-logs.md
+        - name: Aanmeldingslogboeken
+          href: concept-sign-ins.md
+        - name: Riskante aanmeldingen
+          href: concept-risky-sign-ins.md
+        - name: Risicogebeurtenissen
+          href: concept-risk-events.md
+        - name: Gebruikers die risico lopen
+          href: concept-user-at-risk.md
+        - name: API's voor rapportage
+          href: concept-reporting-api.md
+    - name: Bewaking
+      items:
+        - name: Azure AD-logboeken in Azure Monitor
+          href: concept-activity-logs-azure-monitor.md
 - name: Handleidingen
-  items:
-  - name: Rapporten
-    items:
-    - name: Activiteitenrapporten vinden
-      href: howto-find-activity-reports.md
-    - name: Aanmeldproblemen voor een gebruiker oplossen
-      href: howto-troubleshoot-sign-in-errors.md
-    - name: Gebruikers herstellen voor wie wordt aangegeven dat ze risico lopen
-      href: howto-remediate-users-flagged-for-risk.md
-    - name: Power BI-inhoudspakket voor Azure AD-rapporten gebruiken
-      href: howto-power-bi-content-pack.md
-    - name: Vereisten voor API voor rapportage configureren
-      href: howto-configure-prerequisites-for-reporting-api.md
-  - name: Bewaking
-    items:
-    - name: Activiteitenlogboeken integreren met Azure Monitor-logboeken
-      href: howto-integrate-activity-logs-with-log-analytics.md
-    - name: Activiteitenlogboeken analyseren in Azure Monitor-logboeken
-      href: howto-analyze-activity-logs-log-analytics.md
-    - name: De logboekanalyseweergaven voor Azure AD installeren en gebruiken
-      href: howto-install-use-log-analytics-views.md
-    - name: Activiteitenlogboeken met SumoLogic integreren
-      href: howto-integrate-activity-logs-with-sumologic.md
-    - name: Activiteitenlogboeken met ArcSight integreren
-      href: howto-integrate-activity-logs-with-arcsight.md
-  - name: Problemen oplossen
-    items:
-    - name: Ontbrekende controlegegevens
-      href: troubleshoot-missing-audit-data.md
-    - name: Ontbrekende gegevens in download
-      href: troubleshoot-missing-data-download.md
-    - name: Geen toegang tot Graph API's voor rapportage
-      href: troubleshoot-graph-api.md
-    - name: Fouten in Power BI-inhoudspakket
-      href: troubleshoot-content-pack.md
   expanded: true
+  items:
+    - name: Rapporten
+      items:
+        - name: Activiteitenrapporten vinden
+          href: howto-find-activity-reports.md
+        - name: Aanmeldproblemen voor een gebruiker oplossen
+          href: howto-troubleshoot-sign-in-errors.md
+        - name: Gebruikers herstellen voor wie wordt aangegeven dat ze risico lopen
+          href: howto-remediate-users-flagged-for-risk.md
+        - name: Power BI-inhoudspakket voor Azure AD-rapporten gebruiken
+          href: howto-power-bi-content-pack.md
+        - name: Vereisten voor API voor rapportage configureren
+          href: howto-configure-prerequisites-for-reporting-api.md
+        - name: Azure Monitor-workbooks gebruiken
+          href: howto-use-azure-monitor-workbooks.md
+    - name: Bewaking
+      items:
+        - name: Activiteitenlogboeken integreren met Azure Monitor-logboeken
+          href: howto-integrate-activity-logs-with-log-analytics.md
+        - name: Activiteitenlogboeken analyseren in Azure Monitor-logboeken
+          href: howto-analyze-activity-logs-log-analytics.md
+        - name: De logboekanalyseweergaven voor Azure AD installeren en gebruiken
+          href: howto-install-use-log-analytics-views.md
+        - name: Activiteitenlogboeken met SumoLogic integreren
+          href: howto-integrate-activity-logs-with-sumologic.md
+        - name: Activiteitenlogboeken met ArcSight integreren
+          href: howto-integrate-activity-logs-with-arcsight.md
+    - name: Problemen oplossen
+      items:
+        - name: Ontbrekende controlegegevens
+          href: troubleshoot-missing-audit-data.md
+        - name: Ontbrekende gegevens in download
+          href: troubleshoot-missing-data-download.md
+        - name: Geen toegang tot Graph API's voor rapportage
+          href: troubleshoot-graph-api.md
+        - name: Fouten in Power BI-inhoudspakket
+          href: troubleshoot-content-pack.md
 - name: Naslaginformatie
-  items:
-  - name: Rapporten
-    items:
-    - name: API-verwijzing voor auditlogboeken
-      href: https://developer.microsoft.com/graph/docs/api-reference/beta/resources/directoryaudit
-    - name: API-verwijzing voor aanmeldlogboeken
-      href: https://developer.microsoft.com/graph/docs/api-reference/beta/resources/signin
-    - name: Activiteiten controleren
-      href: reference-audit-activities.md
-    - name: Beleid voor gegevensretentie
-      href: reference-reports-data-retention.md
-    - name: Wachttijden voor rapportage
-      href: reference-reports-latencies.md
-    - name: Foutcodes voor aanmelding
-      href: reference-sign-ins-error-codes.md
-    - name: Veelgestelde vragen
-      href: reports-faq.md
-  - name: Bewaking
-    items:
-    - name: Schema van auditlogboek
-      href: reference-azure-monitor-audit-log-schema.md
-    - name: Schema van aanmeldingslogboek
-      href: reference-azure-monitor-sign-ins-log-schema.md
   expanded: true
-ms.openlocfilehash: 746e3834189b9c0c478f7bbcd8b72e6760c288f6
-ms.sourcegitcommit: ab6fa92977255c5ecbe8a53cac61c2cd2a11601f
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/20/2019
-ms.locfileid: "58293767"
+  items:
+    - name: Rapporten
+      items:
+        - name: API-verwijzing voor auditlogboeken
+          href: 'https://developer.microsoft.com/graph/docs/api-reference/beta/resources/directoryaudit'
+        - name: API-verwijzing voor aanmeldlogboeken
+          href: 'https://developer.microsoft.com/graph/docs/api-reference/beta/resources/signin'
+        - name: Activiteiten controleren
+          href: reference-audit-activities.md
+        - name: Beleid voor gegevensretentie
+          href: reference-reports-data-retention.md
+        - name: Wachttijden voor rapportage
+          href: reference-reports-latencies.md
+        - name: Foutcodes voor aanmelding
+          href: reference-sign-ins-error-codes.md
+        - name: Veelgestelde vragen
+          href: reports-faq.md
+    - name: Bewaking
+      items:
+        - name: Schema van auditlogboek
+          href: reference-azure-monitor-audit-log-schema.md
+        - name: Schema van aanmeldingslogboek
+          href: reference-azure-monitor-sign-ins-log-schema.md
