--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -1,246 +1,243 @@
-items:
 - name: Documentatie over Application Gateway
   href: index.yml
 - name: Overzicht
   items:
-  - name: Over toepassingsgateways
-    href: overview.md
-  - name: Wat is nieuw?
-    href: whats-new.md
+    - name: Over toepassingsgateways
+      href: overview.md
+    - name: Wat is nieuw?
+      href: whats-new.md
 - name: Snelstartgidsen
-  items:
-  - name: Een toepassingsgateway maken - Portal
-    href: quick-create-portal.md
-  - name: Een toepassingsgateway maken - PowerShell
-    href: quick-create-powershell.md
-  - name: Een toepassingsgateway maken - Azure CLI
-    href: quick-create-cli.md
   expanded: true
+  items:
+    - name: Een toepassingsgateway maken - Portal
+      href: quick-create-portal.md
+    - name: Een toepassingsgateway maken - PowerShell
+      href: quick-create-powershell.md
+    - name: Een toepassingsgateway maken - Azure CLI
+      href: quick-create-cli.md
 - name: Zelfstudies
   items:
-  - name: Web Application Firewall inschakelen
-    href: application-gateway-web-application-firewall-portal.md
-  - name: Beveiligen met SSL
-    href: create-ssl-portal.md
-  - name: Meerdere sites hosten
-    href: create-multiple-sites-portal.md
-  - name: Routeren met URL
-    href: create-url-route-portal.md
-  - name: Webverkeer omleiden
-    href: tutorial-url-redirect-cli.md
-  - name: Automatisch schalen en zoneredundantie
-    href: tutorial-autoscale-ps.md
+    - name: Web Application Firewall inschakelen
+      href: application-gateway-web-application-firewall-portal.md
+    - name: Beveiligen met SSL
+      href: create-ssl-portal.md
+    - name: Meerdere sites hosten
+      href: create-multiple-sites-portal.md
+    - name: Routeren met URL
+      href: create-url-route-portal.md
+    - name: Webverkeer omleiden
+      href: tutorial-url-redirect-cli.md
+    - name: Automatisch schalen en zoneredundantie
+      href: tutorial-autoscale-ps.md
 - name: Voorbeelden
   items:
-  - name: Azure PowerShell
-    href: powershell-samples.md
-  - name: Azure-CLI
-    href: cli-samples.md
+    - name: Azure PowerShell
+      href: powershell-samples.md
+    - name: Azure-CLI
+      href: cli-samples.md
 - name: Concepten
   items:
-  - name: Basisbeginselen
-    items:
-    - name: Hoe Application Gateway werkt
-      href: how-application-gateway-works.md
-    - name: Onderdelen van Application Gateway
-      href: application-gateway-components.md
-    - name: Configuratieoverzicht
-      href: configuration-overview.md
-  - name: Routering
-    items:
-    - name: Meerdere sites hosten
-      href: multiple-site-overview.md
-    - name: URL-routering
-      href: url-route-overview.md
-    - name: Omleiding
-      href: redirect-overview.md
-    - name: HTTP-headers opnieuw genereren
-      href: rewrite-http-headers.md
-    - name: Aangepaste foutpagina's
-      href: custom-error.md
-  - name: SSL
-    items:
-    - name: SSL-beëindiging en end-to-end-SSL
-      href: ssl-overview.md
-    - name: Overzicht van het SSL-beleid
-      href: application-gateway-ssl-policy-overview.md
-  - name: WAF
-    items:
-    - name: Web Application Firewall
-      href: waf-overview.md
-    - name: WAF-configuratie
-      href: application-gateway-waf-configuration.md
-  - name: Statuscontrole
-    items:
-    - name: Statustest
-      href: application-gateway-probe-overview.md
-    - name: Diagnostiek
-      href: application-gateway-diagnostics.md
-  - name: Automatisch schalen en zoneredundantie
-    href: application-gateway-autoscaling-zone-redundant.md
-  - name: App Service-web-app en ondersteuning voor meerdere tenants
-    href: application-gateway-web-app-overview.md
-  - name: Ondersteuning voor WebSocket
-    href: application-gateway-websocket.md
-  - name: Veelgestelde vragen
-    href: application-gateway-faq.md
+    - name: Basisbeginselen
+      items:
+        - name: Hoe Application Gateway werkt
+          href: how-application-gateway-works.md
+        - name: Onderdelen van Application Gateway
+          href: application-gateway-components.md
+        - name: Configuratieoverzicht
+          href: configuration-overview.md
+    - name: Routering
+      items:
+        - name: Meerdere sites hosten
+          href: multiple-site-overview.md
+        - name: URL-routering
+          href: url-route-overview.md
+        - name: Omleiding
+          href: redirect-overview.md
+        - name: HTTP-headers opnieuw genereren
+          href: rewrite-http-headers.md
+        - name: Aangepaste foutpagina's
+          href: custom-error.md
+    - name: SSL
+      items:
+        - name: SSL-beëindiging en end-to-end-SSL
+          href: ssl-overview.md
+        - name: Overzicht van het SSL-beleid
+          href: application-gateway-ssl-policy-overview.md
+        - name: Key Vault gebruiken
+          href: key-vault-certs.md
+    - name: WAF
+      items:
+        - name: Web Application Firewall
+          href: waf-overview.md
+        - name: WAF-configuratie
+          href: application-gateway-waf-configuration.md
+    - name: Statuscontrole
+      items:
+        - name: Statustest
+          href: application-gateway-probe-overview.md
+        - name: Diagnostiek
+          href: application-gateway-diagnostics.md
+    - name: Automatisch schalen en zoneredundantie
+      href: application-gateway-autoscaling-zone-redundant.md
+    - name: App Service-web-app en ondersteuning voor meerdere tenants
+      href: application-gateway-web-app-overview.md
+    - name: Ondersteuning voor WebSocket
+      href: application-gateway-websocket.md
+    - name: Veelgestelde vragen
+      href: application-gateway-faq.md
 - name: Handleidingen
   items:
-  - name: Eén site hosten
-    items:
-    - name: Azure PowerShell
-      href: tutorial-manage-web-traffic-powershell.md
-    - name: Azure-CLI
-      href: tutorial-manage-web-traffic-cli.md
-    - name: Template
-      href: create-vmss-template.md
-  - name: Een interne load balancer configureren
-    items:
-    - name: Azure Portal
-      href: configure-application-gateway-with-private-frontend-ip.md
-    - name: Azure PowerShell
-      href: application-gateway-ilb-arm.md
-  - name: SSL configureren
-    items:
-    - name: SSL-beëindiging
+    - name: Eén site hosten
       items:
-      - name: SSL-beëindiging - PowerShell
-        href: tutorial-ssl-powershell.md
-      - name: SSL-beëindiging - Azure CLI
-        href: tutorial-ssl-cli.md
-    - name: End-to-end-SSL
+        - name: Azure PowerShell
+          href: tutorial-manage-web-traffic-powershell.md
+        - name: Azure-CLI
+          href: tutorial-manage-web-traffic-cli.md
+        - name: Template
+          href: create-vmss-template.md
+    - name: Een interne load balancer configureren
       items:
-      - name: End-to-end SSL - Portal
-        href: end-to-end-ssl-portal.md
-      - name: End-to-end-SSL - PowerShell
-        href: application-gateway-end-to-end-ssl-powershell.md
-    - name: Certificaten beheren
+        - name: Azure Portal
+          href: configure-application-gateway-with-private-frontend-ip.md
+        - name: Azure PowerShell
+          href: application-gateway-ilb-arm.md
+    - name: SSL configureren
       items:
-      - name: Certificaten maken voor back-endopname
-        href: certificates-for-backend-authentication.md
-      - name: Certificaten vernieuwen
-        href: renew-certificates.md
-    - name: SSL-beleid
+        - name: SSL-beëindiging
+          items:
+            - name: SSL-beëindiging - PowerShell
+              href: tutorial-ssl-powershell.md
+            - name: SSL-beëindiging - Azure CLI
+              href: tutorial-ssl-cli.md
+            - name: Key Vault configureren - PowerShell
+              href: configure-keyvault-ps.md
+        - name: End-to-end-SSL
+          items:
+            - name: End-to-end SSL - Portal
+              href: end-to-end-ssl-portal.md
+            - name: End-to-end-SSL - PowerShell
+              href: application-gateway-end-to-end-ssl-powershell.md
+        - name: Certificaten beheren
+          items:
+            - name: Certificaten maken voor back-endopname
+              href: certificates-for-backend-authentication.md
+            - name: Certificaten vernieuwen
+              href: renew-certificates.md
+        - name: SSL-beleid
+          items:
+            - name: SSL-beleid configureren
+              href: application-gateway-configure-ssl-policy-powershell.md
+    - name: Web Application Firewall configureren
       items:
-      - name: SSL-beleid configureren
-        href: application-gateway-configure-ssl-policy-powershell.md
-  - name: Web Application Firewall configureren
-    items:
-    - name: Azure PowerShell
-      href: tutorial-restrict-web-traffic-powershell.md
-    - name: Azure-CLI
-      href: tutorial-restrict-web-traffic-cli.md
-  - name: WAF-regelsets configureren
-    items:
-    - name: Azure Portal
-      href: application-gateway-customize-waf-rules-portal.md
-    - name: Azure PowerShell
-      href: application-gateway-customize-waf-rules-powershell.md
-    - name: Azure-CLI
-      href: application-gateway-customize-waf-rules-cli.md
-  - name: Routeren met URL
-    items:
-    - name: Azure PowerShell
-      href: tutorial-url-route-powershell.md
-    - name: Azure-CLI
-      href: tutorial-url-route-cli.md
-  - name: Meerdere sites hosten
-    items:
-    - name: Azure PowerShell
-      href: tutorial-multiple-sites-powershell.md
-    - name: Azure-CLI
-      href: tutorial-multiple-sites-cli.md
-  - name: Verkeer omleiden
-    items:
-    - name: Extern verkeer
+        - name: Azure PowerShell
+          href: tutorial-restrict-web-traffic-powershell.md
+        - name: Azure-CLI
+          href: tutorial-restrict-web-traffic-cli.md
+    - name: WAF-regelsets configureren
       items:
-      - name: Azure PowerShell
-        href: redirect-external-site-powershell.md
-      - name: Azure-CLI
-        href: redirect-external-site-cli.md
-    - name: HTTP naar HTTPS
+        - name: Azure Portal
+          href: application-gateway-customize-waf-rules-portal.md
+        - name: Azure PowerShell
+          href: application-gateway-customize-waf-rules-powershell.md
+        - name: Azure-CLI
+          href: application-gateway-customize-waf-rules-cli.md
+    - name: Routeren met URL
       items:
-      - name: Azure Portal
-        href: redirect-http-to-https-portal.md
-      - name: Azure PowerShell
-        href: redirect-http-to-https-powershell.md
-      - name: Azure-CLI
-        href: redirect-http-to-https-cli.md
-    - name: Intern verkeer omleiden
+        - name: Azure PowerShell
+          href: tutorial-url-route-powershell.md
+        - name: Azure-CLI
+          href: tutorial-url-route-cli.md
+    - name: Meerdere sites hosten
       items:
-      - name: Azure PowerShell
-        href: redirect-internal-site-powershell.md
-      - name: Azure-CLI
-        href: redirect-internal-site-cli.md
-    - name: Webverkeer omleiden met Azure PowerShell
-      href: tutorial-url-redirect-powershell.md
-  - name: HTTP-headers opnieuw genereren
-    items:
-    - name: Azure Portal
-      href: rewrite-http-headers-portal.md
-    - name: Azure PowerShell
-      href: add-http-header-rewrite-rule-powershell.md
-  - name: Service met App Service-web-app en meerdere tenants configureren
-    items:
-    - name: Portal
-      href: configure-web-app-portal.md
-    - name: Azure PowerShell
-      href: create-web-app.md
-  - name: Aangepaste tests configureren
-    items:
-    - name: Portal
-      href: application-gateway-create-probe-portal.md
-    - name: Klassieke PowerShell
-      href: application-gateway-create-probe-classic-ps.md
-    - name: Resource Manager PowerShell
-      href: application-gateway-create-probe-ps.md
-  - name: Problemen oplossen
-    items:
-    - name: ILB met een App Service-omgeving
-      href: create-gateway-internal-load-balancer-app-service-environment.md
-    - name: Omleiding naar de URL van App Service
-      href: troubleshoot-app-service-redirection-app-service-url.md
-    - name: Problemen met sessieaffiniteit
-      href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
-    - name: Fouten met ongeldige gateway (502)
-      href: application-gateway-troubleshooting-502.md
+        - name: Azure PowerShell
+          href: tutorial-multiple-sites-powershell.md
+        - name: Azure-CLI
+          href: tutorial-multiple-sites-cli.md
+    - name: Verkeer omleiden
+      items:
+        - name: Extern verkeer
+          items:
+            - name: Azure PowerShell
+              href: redirect-external-site-powershell.md
+            - name: Azure-CLI
+              href: redirect-external-site-cli.md
+        - name: HTTP naar HTTPS
+          items:
+            - name: Azure Portal
+              href: redirect-http-to-https-portal.md
+            - name: Azure PowerShell
+              href: redirect-http-to-https-powershell.md
+            - name: Azure-CLI
+              href: redirect-http-to-https-cli.md
+        - name: Intern verkeer omleiden
+          items:
+            - name: Azure PowerShell
+              href: redirect-internal-site-powershell.md
+            - name: Azure-CLI
+              href: redirect-internal-site-cli.md
+        - name: Webverkeer omleiden met Azure PowerShell
+          href: tutorial-url-redirect-powershell.md
+    - name: HTTP-headers opnieuw genereren
+      items:
+        - name: Azure Portal
+          href: rewrite-http-headers-portal.md
+        - name: Azure PowerShell
+          href: add-http-header-rewrite-rule-powershell.md
+    - name: Service met App Service-web-app en meerdere tenants configureren
+      items:
+        - name: Portal
+          href: configure-web-app-portal.md
+        - name: Azure PowerShell
+          href: create-web-app.md
+    - name: Aangepaste tests configureren
+      items:
+        - name: Portal
+          href: application-gateway-create-probe-portal.md
+        - name: Klassieke PowerShell
+          href: application-gateway-create-probe-classic-ps.md
+        - name: Resource Manager PowerShell
+          href: application-gateway-create-probe-ps.md
+    - name: Problemen oplossen
+      items:
+        - name: ILB met een App Service-omgeving
+          href: create-gateway-internal-load-balancer-app-service-environment.md
+        - name: Omleiding naar de URL van App Service
+          href: troubleshoot-app-service-redirection-app-service-url.md
+        - name: Problemen met sessieaffiniteit
+          href: how-to-troubleshoot-application-gateway-session-affinity-issues.md
+        - name: Fouten met ongeldige gateway (502)
+          href: application-gateway-troubleshooting-502.md
 - name: Naslaginformatie
   items:
-  - name: CRS-regels
-    href: application-gateway-crs-rulegroups-rules.md
-  - name: Azure-CLI
-    href: /cli/azure/network/application-gateway
-  - name: Azure PowerShell
-    href: /powershell/azure/overview
-  - name: .NET
-    href: /dotnet/api
-  - name: Java
-    href: /java/api
-  - name: Node.js
-    href: https://azure.microsoft.com/develop/nodejs/#azure-sdk
-  - name: Python
-    href: https://azure.microsoft.com/develop/python/
-  - name: REST
-    href: /rest/api/applicationgateway
-  - name: Azure Resource Manager
-    href: ../azure-resource-manager/resource-group-overview.md
+    - name: CRS-regels
+      href: application-gateway-crs-rulegroups-rules.md
+    - name: Azure-CLI
+      href: /cli/azure/network/application-gateway
+    - name: Azure PowerShell
+      href: /powershell/azure/overview
+    - name: .NET
+      href: /dotnet/api
+    - name: Java
+      href: /java/api
+    - name: Node.js
+      href: 'https://azure.microsoft.com/develop/nodejs/#azure-sdk'
+    - name: Python
+      href: 'https://azure.microsoft.com/develop/python/'
+    - name: REST
+      href: /rest/api/applicationgateway
+    - name: Azure Resource Manager
+      href: ../azure-resource-manager/resource-group-overview.md
 - name: Resources
   items:
-  - name: Auteursjablonen
-    href: ../azure-resource-manager/resource-group-authoring-templates.md
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Communitysjablonen
-    href: https://azure.microsoft.com/documentation/templates
-  - name: Prijzen
-    href: https://azure.microsoft.com/pricing/details/#Linux
-  - name: Regionale beschikbaarheid
-    href: https://azure.microsoft.com/regions/services/
-  - name: Stack Overflow
-    href: https://stackoverflow.com/questions/tagged/azure-application-gateway
-ms.openlocfilehash: 26ec063b5ad05325eb654a3b112eb5dd6ef23bcc
-ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 04/13/2019
-ms.locfileid: "59547377"
+    - name: Auteursjablonen
+      href: ../azure-resource-manager/resource-group-authoring-templates.md
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Communitysjablonen
+      href: 'https://azure.microsoft.com/documentation/templates'
+    - name: Prijzen
+      href: 'https://azure.microsoft.com/pricing/details/#Linux'
+    - name: Regionale beschikbaarheid
+      href: 'https://azure.microsoft.com/regions/services/'
+    - name: Stack Overflow
+      href: 'https://stackoverflow.com/questions/tagged/azure-application-gateway'
