--- a/articles/governance/resource-graph/toc.yml
+++ b/articles/governance/resource-graph/toc.yml
@@ -1,68 +1,66 @@
-items:
 - name: Documentatie voor Azure Resource Graph
   href: index.yml
 - name: Overzicht
   items:
-  - name: Overzicht van Azure Resource Graph
-    displayName: resource manager, query language, rbac, permissions
-    href: overview.md
+    - name: Overzicht van Azure Resource Graph
+      displayName: 'resource manager, query language, rbac, permissions'
+      href: overview.md
 - name: Snelstartgidsen
-  items:
-  - name: 'Uw eerste query uitvoeren: Azure CLI'
-    displayName: extension, docker
-    href: first-query-azurecli.md
-  - name: 'Uw eerste query uitvoeren: PowerShell'
-    displayName: module, docker, Az.ResourceGraph
-    href: first-query-powershell.md
   expanded: true
+  items:
+    - name: 'Uw eerste query uitvoeren: Azure CLI'
+      displayName: 'extension, docker'
+      href: first-query-azurecli.md
+    - name: 'Uw eerste query uitvoeren: PowerShell'
+      displayName: 'module, docker, Az.ResourceGraph'
+      href: first-query-powershell.md
 - name: Voorbeelden
-  items:
-  - name: Starter-query's
-    displayName: query language, data explorer, count, list, show
-    href: ./samples/starter.md
-  - name: Geavanceerde query's
-    displayName: query language, data explorer, list, regex
-    href: ./samples/advanced.md
   expanded: true
+  items:
+    - name: Starter-query's
+      displayName: 'query language, data explorer, count, list, show'
+      href: ./samples/starter.md
+    - name: Geavanceerde query's
+      displayName: 'query language, data explorer, list, regex'
+      href: ./samples/advanced.md
 - name: Concepten
-  items:
-  - name: Inzicht krijgen in de querytaal
-    displayName: query language, data explorer, tabular, operators, functions
-    href: ./concepts/query-language.md
-  - name: Azure-resources verkennen met Resource Graph
-    displayName: vms, public ip
-    href: ./concepts/explore-resources.md
-  - name: Werken met grote gegevenssets
-    displayName: page, first, skip, token
-    href: ./concepts/work-with-data.md
   expanded: true
+  items:
+    - name: Inzicht krijgen in de querytaal
+      displayName: 'query language, data explorer, tabular, operators, functions'
+      href: ./concepts/query-language.md
+    - name: Azure-resources verkennen met Resource Graph
+      displayName: 'vms, public ip'
+      href: ./concepts/explore-resources.md
+    - name: Werken met grote gegevenssets
+      displayName: 'page, first, skip, token'
+      href: ./concepts/work-with-data.md
+- name: Handleidingen
+  items:
+    - name: Resourcewijzigingen ophalen
+      displayName: 'resource, change, history, snapshot, details'
+      href: ./how-to/get-resource-changes.md
 - name: Naslaginformatie
   items:
-  - name: Azure-CLI
-    href: /cli/azure/ext/resource-graph/graph
-  - name: Azure PowerShell
-    href: /powershell/module/az.resourcegraph/
-  - name: Azure-SDK voor .NET
-    href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
-  - name: Azure-SDK voor Python
-    href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
-  - name: REST
-    href: /rest/api/azureresourcegraph/resources/resources
-  - name: OpenAPI
-    href: https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/preview/2018-09-01-preview
+    - name: Azure-CLI
+      href: /cli/azure/ext/resource-graph/graph
+    - name: Azure PowerShell
+      href: /powershell/module/az.resourcegraph/
+    - name: Azure-SDK voor .NET
+      href: /dotnet/api/Microsoft.Azure.Management.ResourceGraph
+    - name: Azure-SDK voor Python
+      href: /python/api/azure-mgmt-resourcegraph/azure.mgmt.resourcegraph
+    - name: REST
+      href: /rest/api/azureresourcegraph/resources/resources
+    - name: OpenAPI
+      href: 'https://github.com/Azure/azure-rest-api-specs/tree/master/specification/resourcegraph/resource-manager/Microsoft.ResourceGraph/preview/2018-09-01-preview'
 - name: Resources
   items:
-  - name: Azure-roadmap
-    href: https://azure.microsoft.com/roadmap/
-  - name: Prijscalculator
-    href: https://azure.microsoft.com/pricing/calculator/
-  - name: UserVoice
-    href: https://feedback.azure.com/forums/915958-azure-governance
-  - name: YouTube-kanaal Governance
-    href: https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ
-ms.openlocfilehash: 9097c3c450eada7d264e5e4c0bfa5eb281cc9601
-ms.sourcegitcommit: 235cd1c4f003a7f8459b9761a623f000dd9e50ef
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/11/2019
-ms.locfileid: "57726699"
+    - name: Azure-roadmap
+      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Prijscalculator
+      href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: UserVoice
+      href: 'https://feedback.azure.com/forums/915958-azure-governance'
+    - name: YouTube-kanaal Governance
+      href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
